adjusted choco milk pdf, corrected recipes of candy apple and chocolate milk.

--- a/src/main/resources/data/gravecraft/recipes/candyapple.json
+++ b/src/main/resources/data/gravecraft/recipes/candyapple.json
@@ -7,7 +7,7 @@
   ],
   "key": {
     "#": {
-      "tag": "minecraft:sugar"
+      "item": "minecraft:sugar"
     },
     "X": {
       "item": "minecraft:apple"
